Restructure to avoid flicker in IE10

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -29,6 +29,7 @@
   width:100%;
   padding-bottom:20px;
   padding-top:5px;
+  height:52px;
 }
 
 .filter-item {
